[package]
name = "nexus"
version = "0.1.0"
authors = ["Henrik Hedlund Andersen <heheand@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
diesel = { version = "1.3.0", features = ["postgres"] }
dotenv = "0.10"
rand = "0.7.2"
serde_json = "1.0.40"